--- a/keo.html
+++ b/keo.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <button>rock</button>
+    <button>paper</button>
+    <button>scissors</button>
+    <div></div>
     <script src="bao.js"></script>
 </body>
 </html>
